<resources>
    <string name="app_name">Alergenko</string>

    <!--Login activity-->
    <string name="greeting1">Dobrodošli nazaj... !</string>
    <string name="greeting2">Prijavite se v svoj račun</string>
    <string name="txtv_forgot_password">Pozabljeno geslo?</string>
    <string name="txtv_register"><font color="#1E263C">Nimate še računa? </font><font color="#EC6745"><b>Registracija</b></font></string>

    <!--Register activity-->
    <string name="title_register">Registracija</string>
    <string name="county_code">+386</string>


    <!--Verification activity-->
    <string name="title_verification">Verifikacija</string>
    <string name="txtv_instruction_1">Preverjanje vašega e-poštnega naslova</string>
    <string name="txtv_instruction_2">Na Vaš e-poštni naslov smo poslali povezavo s katero potrdite Vaš e-poštni naslov (preverite tudi VSILJENO POŠTO / SPAM).</string>

    <string name="txtv_resend"><font color="#1E263C">Niste prejeli e-pošte? </font> <font color="#EC6745"><b>Ponovno pošlji</b></font></string>


    <!--Reset passowrd activty-->
    <string name="title_reset_password">Ponastavitev gesla</string>
    <string name="txtv_instruction_3">Ali ste pozabili geslo?</string>
    <string name="txtv_instruction_4">Potrebujemo vašo e-pošto, da vam pošljemo e-poštno sporočilo za ponastavitev gesla.</string>
    <string name="notification_reset_password_email_send">Na vaš e-poštni naslov smo poslali sporočilo za ponastavitev gesla (preverite tudi VSILJENO POŠTO / SPAM).</string>

    <!--Product info activity-->
    <string name="title_product_info">Informacije o izdelku</string>
    <string name="product_does_not_contain_allergens">Izdelek ne vsebuje alergenov.</string>

    <!--Product not found activity-->
    <string name="title_product_not_found">Neznan izdelek</string>
    <string name="txtv_product_not_found">Nekaj je šlo narobe, poskusite ponovno pozneje.</string>

    <!--Edit info activity-->
    <string name="title_edit_info">Podatki o računu</string>

    <!--Shopping list fragment-->
    <string name="title_shopping_list">Nakupovalni seznam</string>
    <string name="btn_add_item">+</string>
    <string name="hint_shopping_list">Dodajte izdelke...</string>

    <!--Settings fragment-->
    <string name="title_settings">Nastavitve</string>
    <string name="txtv_account_settings">Nastavitve računa</string>
    <string name="txtv_view_settings">Nastavitve pogleda</string>
    <string name="sw_show_ingredinets">Prikaži sestavine</string>
    <string name="sw_show_nutrition_values">Prikaži hranilne vrednosti</string>
    <string name="sw_show_allergens">Prikaži alergene</string>

    <!--Scan fragment-->
    <string name="title_scan">Skeniranje</string>
    <string name="status_text">Postavite črtno kodo v okvir, da jo skenirate.</string>

    <!--Hisotry fragment-->
    <string name="title_history">Zgodovina</string>

    <!--Menu / nav bar strings-->
    <string name="nav_settings">Nastavitve</string>
    <string name="nav_shopping_list">Seznam</string>
    <string name="nav_scan">Skeniranje</string>
    <string name="nav_history">Zgodovina</string>

    <!--Product card-->
    <string name="txtv_allergens_title">Alergeni:</string>
    <string name="txtv_ingredients_title">Sestavine:</string>
    <string name="txtv_nutrition_values_title">Hranilne vrednosti:</string>

    <!--Button hints -->
    <string name="btn_login">Prijava</string>
    <string name="btn_register">Registracija</string>
    <string name="btn_send">Pošlji</string>
    <string name="btn_open_login_activty">Nazaj na prijavno okno</string>
    <string name="btn_update_info">Spremenite podatke računa</string>
    <string name="btn_delete_account">Izbrišite račun</string>
    <string name="btn_close">Zapri okno</string>
    <string name="btn_update">Posodobi</string>
    <string name="btn_log_out">Odjava</string>
    <string name="btn_send_password_reset_gmail">Pošlji e-poštno sporočilo</string>

    <!--Input hints-->
    <string name="input_email_hint">Vnesite vaš e-poštni naslov</string>
    <string name="input_email_hint_short">E-poštni naslov</string>
    <string name="input_psswd_hint">Vnesite vaše geslo</string>
    <string name="input_psswd_confirm_hint">Ponovno vnesite vaše geslo</string>
    <string name="input_name_hint">Vnesite vaše ime</string>
    <string name="input_name_hint_short">Ime</string>
    <string name="input_surname_hint">Vnesite vaš priimek</string>
    <string name="input_surname_hint_short">Priimek</string>
    <string name="input_phone_hint">Vnesite vašo telefonsko številko</string>
    <string name="input_phone_hint_short">Telefonska številka</string>
    <string name="input_search_hint">Vnesite ime izdelka</string>

    <!--Image descriptions-->
    <string name="logo_description">logo</string>
    <string name="btn_back_description">gumb za najaz</string>
    <string name="product_img">slika izdelka</string>

    <!--Exception strings-->
    <string name="exception">Napaka</string>
    <string name="exception_general">Prišlo je do napake, poskusite ponovno.</string>
    <string name="no_internet_connection">Nimate vzpostavljene internetne povezave.</string>
    <string name="exception_verification">Tekom verifikacije je prišlo do napake:</string>
    <string name="exception_bad_verification_code">Napačna verifikacijska koda.</string>
    <string name="exception_username_password">Napačen e-poštni naslov ali geslo.</string>
    <string name="exception_firebase">Prišlo je do omrežne napake (kot je časovna omejitev ali prekinjena povezava).</string>
    <string name="exception_email_not_verified">Vaš e-poštni naslov še ni preverjen.</string>
    <string name="exception_data_update">Pri spremebi podatkov je prišlo do napake.</string>

    <!--Notification strings-->
    <string name="notification">Obvestilo</string>
    <string name="notification_registration_success">Uspešna registracija.</string>
    <string name="notification_account_deleted">Uporabniški račun je bil uspešno izbrisan.</string>
    <string name="notification_data_updated">Podatki so bili uspešno posodobljeni.</string>

    <!--Permission notifications-->
    <string name="notification_permission_needed">Potrebno dovoljenje</string>
    <string name="notification_permission_needed_expleined">Brez dostopa do kamere vam ne moremo omogčiti skeniranja črtnih kod.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>